--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,6 +20,7 @@ jobs:
           path: |
             ./arduino-cli
             ~/.arduino15/
+            ~/Arduino/
           key: arduino-cli
 
       - name: Setup arduino-cli
