--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,31 +5,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  lint:
     name: Check
     runs-on: ubuntu-24.04
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - name: Cache arduino-cli
-        id: arduino-cli
-        uses: actions/cache@v4
+      - name: Lint
+        uses: arduino/arduino-lint-action@v2
         with:
-          path: |
-            ./arduino-cli
-            ~/.arduino15/
-            ~/Arduino/
-          key: arduino-cli
-
-      - name: Setup arduino-cli
-        if: steps.arduino-cli.outputs.cache-hit != 'true'
-        run: |
-          curl -LO# https://github.com/arduino/arduino-cli/releases/download/v1.2.2/arduino-cli_1.2.2_Linux_64bit.tar.gz
-          tar -zxvf arduino-cli_1.2.2_Linux_64bit.tar.gz
-          ./arduino-cli core install arduino:avr
-          ./arduino-cli lib install Servo
-
-      - name: Compile
-        run: ./arduino-cli compile -v -b arduino:avr:mega Inspector
+          path: ./Inspector/
+          compliance: strict
